RESOLVED FIXED219881
Get more informatiton from assertion when uidna_openUTS46 fails
https://bugs.webkit.org/show_bug.cgi?id=219881
Summary Get more informatiton from assertion when uidna_openUTS46 fails
Alex Christensen
Reported 2020-12-14 17:01:59 PST
Get more informatiton from assertion when uidna_openUTS46 fails
Attachments
Patch (1.60 KB, patch)
2020-12-14 17:03 PST, Alex Christensen
no flags
Patch (1.60 KB, patch)
2020-12-14 17:13 PST, Alex Christensen
no flags
Patch (1.53 KB, patch)
2020-12-14 18:23 PST, Alex Christensen
no flags
Patch (1.51 KB, patch)
2020-12-14 18:26 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2020-12-14 17:03:37 PST
Alex Christensen
Comment 2 2020-12-14 17:03:40 PST
Alex Christensen
Comment 3 2020-12-14 17:13:47 PST
Alexey Proskuryakov
Comment 4 2020-12-14 17:25:08 PST
Comment on attachment 416214 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=416214&action=review > Source/WTF/wtf/URLParser.cpp:2864 > + RELEASE_ASSERT(error == U_MEMORY_ALLOCATION_ERROR); May be worth logging the error to system log. It's hard to imagine any other reason for the failure, but it's hard to run out of address space, too.
Alex Christensen
Comment 5 2020-12-14 18:23:33 PST
Alex Christensen
Comment 6 2020-12-14 18:26:49 PST
EWS
Comment 7 2020-12-14 18:59:20 PST
Committed r270818: <https://trac.webkit.org/changeset/270818> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416220 [details].
Note You need to log in before you can comment on or make changes to this bug.