Get more informatiton from assertion when uidna_openUTS46 fails https://bugs.webkit.org/show_bug.cgi?id=219881

Patch by Alex Christensen <achristensen@webkit.org> on 2020-12-14
Reviewed by Alexey Proskuryakov.

<rdar://problem/66988046> shows that this fails sometimes.
Updating the assertion should let me know more information.

* wtf/URLParser.cpp:
(WTF::URLParser::internationalDomainNameTranscoder):

Canonical link: https://commits.webkit.org/232467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270818 268f45cc-cd09-0410-ab3c-d52691b4dbfc